General:
- All bugfixes outlined in docs/bugs_and_glitches.md have been implemented
- All censored/cut content restored from Japanese version
- Odd Egg now has 50/50 chance of giving a shiny like in Japanese version

QoL:
- No password needed to reset the clock (still hold Down + B + SEL)
- Much faster saving
- Prompt to reuse repels
- Lottery is daily instead of weekly
- Receive multiples of fruit from trees
- Kurt makes apricorn balls instantly
- Shorter low health beep
- Added Tradeback Guy to the Mobile Center (Gameboy kid closest to the door)

Moves n' stuff:
- TMs are reusable
- TM/HM names are shown in menus & when received
- HMs are forgettable
- Pokemon need only be able to learn a field move in order to use it
- The Move Deleter is now the Move Reminder. This implementation can teach moves of previous evolutions as well
- Goldenrod Move Tutor is free, available after clearing Radio Tower, and can teach endlessly

Battle:
- Twineedle can no longer poison Steel types; Tri Attack can no longer burn Fire types or freeze Ice types
- Removed the AI's extra 25% chance to miss status moves
- Text updated to differentiate between miss, fail, & protect
- Removed both the badge stat boost & type boost

Items:
- Abra now holds Twistedspoon 2% of the time
- Common wild hold item chance increased from 23% to 50%, rare from 2% to 5%

Aesthetics:
- Applied a BGB style color filter. Included program used to edit source pngs with instructions

Miscellaneous:
- Able to bike through the National Park gates
- Improved outdoor sprite system


more to come...