@@ -78,7 +78,7 @@
 	const EVENT_GOT_SHUCKIE
 	const EVENT_MANIA_TOOK_SHUCKIE_OR_LET_YOU_KEEP_HIM
 	const EVENT_GOT_SUNNY_DAY_FROM_RADIO_TOWER
-	const EVENT_GOT_PINK_BOW_FROM_MARY
+	const EVENT_GOT_BRIGHTPOWDER_FROM_MARY
 	const EVENT_USED_BASEMENT_KEY
 	const EVENT_RECEIVED_CARD_KEY
 	const EVENT_GOT_TM08_ROCK_SMASH
@@ -1460,7 +1460,8 @@
 	const EVENT_DARK_CAVE_VIOLET_ENTRANCE_DIRE_HIT
 	const EVENT_BATTLE_TOWER_OPEN_CIVILIANS
 	const EVENT_MET_MOVE_TUTOR
-; Unused: next 47 events
+	const EVENT_BATTLE_TOWER_OUTSIDE_SCOPE_LENS
+; Unused: next 46 events
 
 	const_next 2048
 DEF NUM_EVENTS EQU const_value ; 800
