@@ -6,7 +6,7 @@
 	db NORMAL, NORMAL ; type
 	db 170 ; catch rate
 	db 76 ; base exp
-	db NO_ITEM, NO_ITEM ; items
+	db NO_ITEM, POLKADOT_BOW ; items
 	db GENDER_F75 ; gender ratio
 	db 100 ; unknown 1
 	db 10 ; step cycles to hatch
