@@ -6,7 +6,7 @@
 	db FIGHTING, FIGHTING ; type
 	db 180 ; catch rate
 	db 88 ; base exp
-	db NO_ITEM, NO_ITEM ; items
+	db NO_ITEM, BRICK_PIECE ; items
 	db GENDER_F25 ; gender ratio
 	db 100 ; unknown 1
 	db 20 ; step cycles to hatch
